--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   intl: ^0.18.0
   mongo_dart: ^0.8.2
   path_provider: ^2.0.11
+  excel: ^2.0.1
+  file_picker: ^5.2.5
+  collection: ^1.17.0
 
 
 dev_dependencies:
