update on scroll

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,4 +49,4 @@ flutter:
 
 
 #flutter pub run flutter_native_splash:create
-#flutter packages pub run build_runner build
+#flutter packages pub run build_runner build --delete-conflicting-outputs
