--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   file_picker: ^5.2.5
   collection: ^1.16.0
   open_app_file: ^4.0.1
+  vs_scrollbar: ^0.2.1
 
 
 dev_dependencies:
