--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,14 +22,16 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   bitsdojo_window: ^0.1.5
-  intl: ^0.18.0
-  mongo_dart: ^0.8.2
+  intl: ^0.17.0
   path_provider: ^2.0.11
   excel: ^2.0.1
   file_picker: ^5.2.5
   collection: ^1.16.0
   open_app_file: ^4.0.1
   vs_scrollbar: ^0.2.1
+  syncfusion_flutter_xlsio: ^20.4.43-beta
+  http: ^0.13.5
+  url_launcher: ^6.1.7
 
 
 
