--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   bitsdojo_window: ^0.1.5
   intl: ^0.17.0
   path_provider: ^2.0.11
-  excel: ^2.0.1
+  excel:
+    git:
+      url: https://github.com/BST-Forked-Projects/excel.git
+      
   file_picker: ^5.2.5
   collection: ^1.16.0
   open_app_file: ^4.0.1
