--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   http: ^0.13.5
   url_launcher: ^6.1.8
   string_similarity: ^2.0.0
-  pdf:
+  pdf: ^3.8.4
+  screenshot: ^1.3.0
 
 
 
