--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   http: ^0.13.5
   url_launcher: ^6.1.8
   string_similarity: ^2.0.0
+  syncfusion_flutter_pdf: ^20.4.48
   pdf:
+ 
 
 
 
