--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,30 +14,31 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  window_manager: ^0.3.0
-  flutter_smart_dialog: ^4.8.2
-  font_awesome_flutter: ^10.3.0
-  google_fonts: ^3.0.1
+  window_manager: ^0.3.4
+  flutter_smart_dialog: ^4.9.0+6
+  font_awesome_flutter: ^10.4.0
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  bitsdojo_window: ^0.1.5
-  intl: ^0.17.0
-  path_provider: ^2.0.12
+#  hive_flutter:
+#    git:
+#      url: https://github.com/Emmanuelfrimpong/hive_flutter.git
+  intl: ^0.18.0
   excel:
     git:
       url: https://github.com/BST-Forked-Projects/excel.git
-      
-  file_picker: ^5.2.5
-  collection: ^1.17.0
   open_app_file: ^4.0.1
   vs_scrollbar: ^0.2.1
-  syncfusion_flutter_xlsio: ^20.4.44-beta
-  http: ^0.13.5
-  url_launcher: ^6.1.8
+  syncfusion_flutter_xlsio: ^21.2.6
+  http: ^1.0.0
+  url_launcher: ^6.1.11
   string_similarity: ^2.0.0
-  syncfusion_flutter_pdf: ^20.4.48
+  syncfusion_flutter_pdf: ^21.2.6
   pdf:
+  google_fonts: ^4.0.5
+  file_picker:
+    git:
+      url: https://github.com/Emmanuelfrimpong/flutter_file_picker.git
 
  
 
@@ -49,7 +50,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.1
   hive_generator: ^2.0.0
-  build_runner: ^2.3.3
+  build_runner: ^2.4.4
 
 flutter:
   uses-material-design: true
