--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 
 dependencies:
@@ -15,27 +15,27 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.5
   window_manager: ^0.3.4
-  flutter_smart_dialog: ^4.9.0+6
+  flutter_smart_dialog: ^4.9.2
   font_awesome_flutter: ^10.4.0
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-#  hive_flutter:
-#    git:
-#      url: https://github.com/Emmanuelfrimpong/hive_flutter.git
-  intl: ^0.18.0
+  intl: ^0.18.1
   excel:
     git:
       url: https://github.com/BST-Forked-Projects/excel.git
   open_app_file: ^4.0.1
   vs_scrollbar: ^0.2.1
-  syncfusion_flutter_xlsio: ^21.2.6
+  syncfusion_flutter_xlsio: ^21.2.9
   http: ^1.0.0
   url_launcher: ^6.1.11
   string_similarity: ^2.0.0
-  syncfusion_flutter_pdf: ^21.2.6
+  syncfusion_flutter_pdf: ^21.2.9
+  firedart:
+    git:
+      url: https://github.com/BST-Forked-Projects/firedart.git
   pdf:
-  google_fonts: ^4.0.5
+  google_fonts: ^5.0.0
   file_picker:
     git:
       url: https://github.com/Emmanuelfrimpong/flutter_file_picker.git
@@ -50,7 +50,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.1
   hive_generator: ^2.0.0
-  build_runner: ^2.4.4
+  build_runner: ^2.4.5
 
 flutter:
   uses-material-design: true
