--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "cupertino",
         "firedart",
         "Frameless",
+        "LTWH",
         "MENKA",
         "nunito",
         "syncfusion",
