--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firedart:
     git:
       url: https://github.com/BST-Forked-Projects/firedart.git
-  pdf:
+  pdf: ^3.10.4
   google_fonts: ^5.0.0
   file_picker:
     git:
