--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
-  window_manager: ^0.3.4
-  flutter_smart_dialog: ^4.9.2
-  font_awesome_flutter: ^10.4.0
+  cupertino_icons: ^1.0.6
+  window_manager: ^0.3.6
+  flutter_acrylic: ^1.1.3
+  system_theme: ^2.3.1
+  flutter_smart_dialog: ^4.9.4
+  font_awesome_flutter: ^10.5.0
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -24,21 +26,24 @@ dependencies:
   excel:
     git:
       url: https://github.com/BST-Forked-Projects/excel.git
-  open_app_file: ^4.0.1
-  vs_scrollbar: ^0.2.1
-  syncfusion_flutter_xlsio: ^21.2.9
-  http: ^1.0.0
-  url_launcher: ^6.1.11
+  open_app_file: ^4.0.2
+  syncfusion_flutter_xlsio: ^21.2.10
+  http: ^1.1.0
+  url_launcher: ^6.1.14
   string_similarity: ^2.0.0
-  syncfusion_flutter_pdf: ^21.2.9
+  syncfusion_flutter_pdf: ^21.2.10
+  fluent_ui: ^4.7.5
+  go_router: ^11.1.1
   firedart:
     git:
       url: https://github.com/BST-Forked-Projects/firedart.git
   pdf:
-  google_fonts: ^5.0.0
+  google_fonts: ^5.1.0
   file_picker:
     git:
       url: https://github.com/Emmanuelfrimpong/flutter_file_picker.git
+  riverpod: ^2.4.1
+  flutter_riverpod: ^2.4.1
 
  
 
@@ -48,9 +53,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.1
-  hive_generator: ^2.0.0
-  build_runner: ^2.4.5
+  flutter_lints: ^2.0.3
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
@@ -58,7 +63,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    
+  fonts:
+    - family: FluentIcons
+      fonts:
+        - asset: assets/FluentIcons.ttf
 
 #flutter pub run flutter_native_splash:create
 #flutter packages pub run build_runner build --delete-conflicting-outputs
