--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,27 +23,26 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.18.1
-  excel:
-    git:
-      url: https://github.com/BST-Forked-Projects/excel.git
   open_app_file: ^4.0.2
-  syncfusion_flutter_xlsio: ^21.2.10
+  syncfusion_flutter_xlsio: ^23.1.38
   http: ^1.1.0
   url_launcher: ^6.1.14
   string_similarity: ^2.0.0
-  syncfusion_flutter_pdf: ^21.2.10
+  syncfusion_flutter_pdf: ^23.1.38
   fluent_ui: ^4.7.5
-  go_router: ^11.1.1
+  go_router: ^11.1.2
   firedart:
     git:
       url: https://github.com/BST-Forked-Projects/firedart.git
   pdf:
-  google_fonts: ^5.1.0
-  file_picker:
-    git:
-      url: https://github.com/Emmanuelfrimpong/flutter_file_picker.git
+  google_fonts: ^6.1.0
+  file_picker: ^5.5.0
   riverpod: ^2.4.1
   flutter_riverpod: ^2.4.1
+  fluttertoast: ^8.2.2
+  excel: ^2.1.0
+  path_provider: ^2.1.1
+  data_table_2: ^2.5.8
 
  
 
