--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.3
   hive_generator: ^2.0.1
-  build_runner: ^2.4.6
+  build_runner: any
 
 flutter:
   uses-material-design: true
