--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 /database
+
+# Windows related
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugins.cmake
+macos/Flutter/GeneratedPluginRegistrant.swift
