--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   flutter_lints: ^3.0.2
   hive_generator: ^2.0.1
   build_runner: any
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -73,3 +74,12 @@ flutter:
 
 #flutter pub run flutter_native_splash:create
 #flutter packages pub run build_runner build --delete-conflicting-outputs
+
+flutter_launcher_icons:
+  windows:
+    generate: true
+    image_path: "assets/logo_light.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: false
+    image_path: "assets/logo_light.png"
