--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,15 @@ dependencies:
   window_manager: ^0.3.8
   flutter_acrylic: ^1.1.3
   system_theme: ^2.3.1
-  flutter_smart_dialog: ^4.9.6
+  flutter_smart_dialog: ^4.9.6+1
   font_awesome_flutter: ^10.7.0
   intl: ^0.18.1
   open_app_file: ^4.0.2
-  syncfusion_flutter_xlsio: ^25.1.39
+  syncfusion_flutter_xlsio: ^25.1.41
   http: ^1.2.1
   url_launcher: ^6.2.6
   string_similarity: ^2.0.0
-  syncfusion_flutter_pdf: ^25.1.39
+  syncfusion_flutter_pdf: ^25.1.41
   fluent_ui: ^4.8.7
   go_router: ^13.2.4
  
@@ -42,10 +42,12 @@ dependencies:
   # screenshot: ^2.3.0
   badges: ^3.1.2
   mongo_dart: ^0.10.1
-  flutter_markdown: ^0.6.22+1
+  flutter_markdown: ^0.7.1
   media_kit: ^1.1.10+1                             # Primary package.
   media_kit_video: ^1.2.4
   media_kit_libs_video: ^1.0.4 
+  cloud_firestore: ^4.17.4
+  firebase_core: ^2.31.1
 
 
  
