--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,19 +19,19 @@ dependencies:
   system_theme: ^2.3.1
   flutter_smart_dialog: ^4.9.6+1
   font_awesome_flutter: ^10.7.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   open_app_file: ^4.0.2
   syncfusion_flutter_xlsio: ^25.1.41
   http: ^1.2.1
   url_launcher: ^6.2.6
   string_similarity: ^2.0.0
-  syncfusion_flutter_pdf: ^25.1.41
+  syncfusion_flutter_pdf: ^25.2.6
   fluent_ui: ^4.8.7
   go_router: ^13.2.4
  
   pdf: ^3.10.8
   google_fonts: ^6.2.1
-  file_picker: ^8.0.0+1
+  file_picker: ^8.0.3
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
   fluttertoast: ^8.2.5
