--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "cmake.sourceDirectory": "D:/GitHub/Time-Table-Generator/windows",
+    "cmake.sourceDirectory": "/Users/fuse/Development/Projects/Time-Table-Generator/windows",
     "cSpell.words": [
         "AAMUSTED",
         "AKENTEN",
